--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,12 +12,10 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "lodash": "^4.17.21",
     "mongoose": "^6.8.2"
   },
   "engines": {
     "node": "16.14.0"
-  },
-  "scripts": {
-    "start": "node app.js"
   }
 }
